--- a/app/views/profiles/_accepted_invitations_table.html.erb
+++ b/app/views/profiles/_accepted_invitations_table.html.erb
@@ -4,7 +4,7 @@
       <th>Name</th>
       <th>Highest position</th>
       <th>Platform</th>
-      <th>App building experience</th>
+      <th><div class ="hidden-phone">App building experience</div></th>
       <th><div class ="hidden-phone">Total apps</div></th>
       <th><div class ="hidden-phone">Highest degree</div></th>
       <th><div class ="hidden-phone">Bay Area</div></th>
