--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -65,14 +65,13 @@
 <%= link_to "Login", candidate_login_path, id: "sign_in", 
                                 class: "btn btn-large btn-info" %>
 
-				    <%= link_to "fb Login*", "/auth/facebook", id: "sign_in", 
+				    <%= link_to "fb Login", "/auth/facebook", id: "sign_in", 
 				                                class: "btn btn-large btn-primary" %>
 
-					<br>
-					<div class ="fb_disclaimer">*None of your actions can be seen on Facebook </div></div>
+					</div>
     
 <div class ="visible-tablet"><h2>Hackers</h2><h4>
-			      Post your CV anonymously.<br> Sit back.<br> Get recruited.
+			      Post your CV anonymously.<br> Sit back. Get recruited.
 			    </h4>
 				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
                                 class: "btn btn-medium btn-info" %>
@@ -80,20 +79,20 @@
 <%= link_to "Login", candidate_login_path, id: "sign_in", 
                                 class: "btn btn-medium btn-info" %>
 
-				    <%= link_to "fb Login*", "/auth/facebook", id: "sign_in", 
+				    <%= link_to "fb Login", "/auth/facebook", id: "sign_in", 
 				                                class: "btn btn-medium btn-primary" %>
 </div>
     <div class ="visible-phone"><h2>Hackers</h2><h4>
 			      Post your CV anonymously.<br> Sit back.<br> Get recruited.
 			    </h4>
 				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
-                                class: "btn btn-small btn-info" %>
+                                class: "btn btn-medium btn-info" %>
 
 <%= link_to "Login", candidate_login_path, id: "sign_in", 
-                                class: "btn btn-small btn-info" %>
+                                class: "btn btn-medium btn-info" %>
 
-				    <%= link_to "fb Login*", "/auth/facebook", id: "sign_in", 
-				                                class: "btn btn-small btn-primary" %>
+				    <%= link_to "fb Login", "/auth/facebook", id: "sign_in", 
+				                                class: "btn btn-medium btn-primary" %>
 </div>
 			     
 					
@@ -117,7 +116,7 @@
 		<div class ="visible-tablet">
 				<h2>Companies</h2>
 			     <h4>
-			      Find the perfect hacker within your budget.
+			      Find the perfect hacker <br> within your budget.
 			    </h4>
 				    <br>
 				    
@@ -127,12 +126,12 @@
 		<div class ="visible-phone">
 				<h2>Companies</h2>
 			     <h4>
-			      Find the perfect hacker within your budget.
+			      Find the perfect hacker <br>within your budget.
 			    </h4>
 				    <br>
 				    
 				<%= link_to "Find hackers", profiles_path, id: "sign_in", 
-                                class: "btn btn-small btn-primary" %>
+                                class: "btn btn-medium btn-primary" %>
 		</div>
 
   	</div>
