--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -28,9 +28,13 @@
 
 
 .container {
-    
+    @media (max-width: 767px) { 
+  width: 99%;
+}
+@media (min-width: 768px) { 
   width: 90%;
 
+}
 }
 
 footer {
