--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -70,7 +70,7 @@
 <%= f.input :confirmed, label: false, inline_label: 'All my responses above are 100% true and I am able to provide reference material if needed.' %>	
 
   <div class="form-actions">
-    <%= f.button :submit, "Save", :class => "btn btn-large btn-primary" %>
+    <%= f.button :submit, "Get recruited", :class => "btn btn-large btn-primary" %>
   </div>
 <% end %>
 
