--- a/app/views/profiles/_full_profile.html.erb
+++ b/app/views/profiles/_full_profile.html.erb
@@ -1,7 +1,12 @@
 <div class="row">
 <div class ="span6">
 	<% if correct_candidate? == true %>
-	<h4>Your anonymous CV</h4>
+	<h4>
+		Sit back and relax. 
+		<br>Interested companies will message you.
+		<br>You decide whether to reveal your identity and connect.
+	</h4>
+
 	<%else%>
 <h4>Anonymous CV</h4>
 <%end%>
