--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,5 @@
-<h3>Post your CV anonymously.</h3>
-<h4>Your identity stays hidden. Companies will send requests. You decide if you want to connect. </h4> 
+<h3>Answer a few questions anonymously.</h3>
+<h4>Don't worry, your identity remains hidden.</h4> 
 
 <% if current_candidate.uid != nil %>
 <h4>None of this information will be visible on Facebook.</h4>
