--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -5,17 +5,17 @@
   		<div class ="module"></div>
 		<b>Your job status</b><br><br>
 			<%= f.input :silicon_valley, label: "Location full-time", inline_label: 'I am willing to work full-time in the SF Bay Area.' %>
-			<%= f.input :general_min_yearly_salary, label: 'Minimum annual salary', placeholder: 'e.g. "65000"', hint: 'Your minimum desired annual salary (in USD)' %>
-		  	<%= f.input :notice_period, label: 'Notice period', placeholder: 'e.g. "3"', hint: 'How quickly could you start (in weeks)?'%>
+			<%= f.input :general_min_yearly_salary, collection: [["$30,000", 30000], ["$40,000",40000], ["$50,000",50000],["$60,000",60000],["$70,000",70000],["$80,000",80000],["$90,000",90000],["$100,000",100000],["$120,000",120000],["$140,000",140000],["$160,000",160000],["$180,000",180000],["$200,000",200000],["$250,000",250000],["$300,000",300000],["$350,000",350000],["$400,000",400000],["$500,000",500000]], prompt: "Select your minimum salary", label: 'Minimum annual salary', placeholder: 'e.g. "65000"', hint: 'Your minimum desired annual salary (in USD)' %>
+		  	<%= f.input :notice_period, collection: [["Today", 0],["1 week", 1],["2 weeks", 2],["3 week", 3], ["4 weeks", 4], ["6 weeks", 6],["2 months", 8],["3 months", 12],["4 months", 16],["5 months", 20],["6 months", 24],["9 months", 36],["1 year", 52]], label: 'Notice period', placeholder: 'e.g. "3"', hint: 'How quickly could you start?', prompt: "Select your notice period"%>
 		  	<%= f.input :work_permit, label: 'Permit', inline_label: 'I am currently permitted to work in the US.' %>
 		 
 		<div class ="module"></div>
 		<b> Your mobile apps </b>
 		<br><br>
-		<%= f.input :ios_apps, label: 'iOS apps in the App Store', hint: 'Number of iOS apps that you built yourself, not in a team.' %>
+		<%= f.input :ios_apps, collection: [["None", 0],["1", 1],["2", 2],["3", 3],["4", 4],["5", 5],["6", 6],["7", 7],["8", 8],["9", 9],["10+", 10],["15+", 15],["20+", 20],["30+", 30],["50+", 50],["100+", 100]], prompt: "Select number of apps", label: 'iOS apps in the App Store', hint: 'Number of iOS apps that you built yourself, not in a team.' %>
 		<div class ="slim_module"></div>
 		
-		<%= f.input :android_apps, label: 'Android apps in the Play Store', hint: 'Number of Android apps that you built yourself, not in a team.' %>
+		<%= f.input :android_apps, collection: [["None", 0],["1", 1],["2", 2],["3", 3],["4", 4],["5", 5],["6", 6],["7", 7],["8", 8],["9", 9],["10+", 10],["15+", 15],["20+", 20],["30+", 30],["50+", 50],["100+", 100]], prompt: "Select number of apps", label: 'Android apps in the Play Store', hint: 'Number of Android apps that you built yourself, not in a team.' %>
 		<div class ="module"></div>
 		<b>Mobile app work experience (start with your last/current job)</b><br><br>
 
@@ -27,8 +27,8 @@
 		  	<%= job_form.input :end_date, label: 'End date', :discard_day => true %>
 		  	<%= job_form.input :current, label: false, inline_label: 'I\'m currently holding this job (overwrites the end date)' %>
 		  	<%= job_form.input :contract, collection: [["Full-time",1], ["Part-time",2]], prompt: "Select contract", label: 'Full-time or part-time?' %>
-		  	<%= job_form.input :annual_salary, label: 'Annual salary if full-time', placeholder: 'e.g. "65000"', hint: 'Annual salary (in USD)' %>
-		  	<%= job_form.input :hourly_salary, label: 'Hourly salary if part-time', placeholder: 'e.g. "50"', hint: 'Hourly salary (in USD)' %>
+		  	<%= job_form.input :annual_salary, collection: [["None", 0],["$10,000", 10000],["$20,000", 20000],["$30,000", 30000], ["$40,000",40000], ["$50,000",50000],["$60,000",60000],["$70,000",70000],["$80,000",80000],["$90,000",90000],["$100,000",100000],["$120,000",120000],["$140,000",140000],["$160,000",160000],["$180,000",180000],["$200,000",200000],["$250,000",250000],["$300,000",300000],["$350,000",350000],["$400,000",400000],["$500,000+",500000]], prompt: "Select annual salary", label: 'Annual salary if full-time', placeholder: 'e.g. "65000"', hint: 'Annual salary (in USD)' %>
+		  	<%= job_form.input :hourly_salary, collection: [["None", 0], ["$10+", 10], ["$15+", 15], ["$20+", 20], ["$30+", 30], ["$40+", 14], ["$50+", 50], ["$60+", 60], ["$70+", 70], ["$80+", 80], ["$90+", 90], ["$100+", 100], ["$125+", 125], ["$150+", 150], ["$200+", 200], ["$250+", 250], ["$300+", 300], ["$400+", 400], ["$500+", 500], ["$750+", 750], ["$1000+", 1000]], prompt: "Select hourly salary", label: 'Hourly salary if part-time', placeholder: 'e.g. "50"', hint: 'Hourly salary (in USD)' %>
 		  	<p><%= job_form.link_to_remove "[-] Remove the above work experience" %></p>
 		  	<br><br>
 		<div class ="slim_module"></div>
