--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -71,7 +71,7 @@
 					</div>
     
 <div class ="visible-tablet"><h2>Hackers</h2><h4>
-			      Tap in 9 questions anonymously.<br> Sit back. Get recruited.
+			      Tap in 9 answers anonymously.<br> Sit back. Get recruited.
 			    </h4>
 				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
                                 class: "btn btn-medium btn-info" %>
@@ -83,7 +83,7 @@
 				                                class: "btn btn-medium btn-primary" %>
 </div>
     <div class ="visible-phone"><h2>Hackers</h2><h4>
-			      Tap in 9 questions anonymously.<br> Sit back.<br> Get recruited.
+			      Tap in 9 answers anonymously.<br> Sit back.<br> Get recruited.
 			    </h4>
 				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
                                 class: "btn btn-medium btn-info" %>
