--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
         <footer>
         <div class="span12">
           <br>
-          TapCV Inc. © 2013 | <%= link_to "Privacy", privacy_path %>
+          TapCV Inc. © 2013 | <%= link_to "Privacy", privacy_path %> | <%= mail_to "info@tapcv.com", "info@tapcv.com" %>
           <br><br>
         </div>
         </footer>
