--- a/app/views/user_mailer/signup.html.erb
+++ b/app/views/user_mailer/signup.html.erb
@@ -1,6 +1,6 @@
 Welcome to TapCV 
 <br><br>
-Use TapCV to find highly qualified iOS hackers that you wouldn't find anyhwere else!
+Use TapCV to find highly qualified hackers that you wouldn't find anyhwere else!
 <br><br>
 
 <b><%= link_to "Start browsing hackers now", root_url %></b>
