hacking instead of app building, stop indexing skills

--- a/app/views/profiles/_invitations_table.html.erb
+++ b/app/views/profiles/_invitations_table.html.erb
@@ -4,7 +4,7 @@
 
       <th>Highest position</th>
       <th>Platform</th>
-      <th>App building experience</th>
+      <th>Hacking experience</th>
       <th>Total apps</th>
       <th><div class ="hidden-phone">Highest degree</div></th>
       <th><div class ="hidden-phone">Bay Area</div></th>
