--- a/app/views/profiles/_table.html.erb
+++ b/app/views/profiles/_table.html.erb
@@ -5,7 +5,7 @@
 
       <th>Highest position</th>
       <th>Platform</th>
-      <th>App building experience</th>
+      <th>Hacking experience</th>
       <th>Total apps</div></th> 
       <th>Highest degree</div></th>
       <th>Bay Area</div></th>
