--- a/app/views/profiles/_table.html.erb
+++ b/app/views/profiles/_table.html.erb
@@ -3,13 +3,11 @@
     <thead>
     <tr>
 
-      <th>Highest position</th>
-      <th>Platform</th>
-      <th>Hacking experience</th>
-      <th>Total apps</div></th> 
-      <th>Highest degree</div></th>
-      <th>Bay Area</div></th>
-      <th>Your status</div></th>
+      <th>Highest degree</th>
+      <th>Subject</th>
+      <th>School</th>
+      <th>Graduation</th>
+      <th>Your status</th>
 
       
     </tr>
@@ -29,9 +27,10 @@
     <thead>
     <tr>
 
-      <th>Highest position</th>
-      <th>Platform</th>
-      <th>App building experience</th>
+      <th>Highest degree</th>
+      <th>Subject</th>
+      <th>School</th>
+      <th>Graduation</th>
       
     </tr>
   
