--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <% if current_candidate %>
 	<% if current_candidate.invitations.any? %>
 	<div class="row">
-		<div class ="span6">
+		<div class ="span8">
 			<h4>Contact requests for you</h4><br>
 			<table class="table table-striped table-hover">
 		    	<tbody>
@@ -56,7 +56,7 @@
 <div class ="span6">
 	<div class="center hero-unit">
 				
-    <div class ="hidden-tablet hidden-phone"><h1>Hackers</h1><h2>
+    <div class ="hidden-tablet hidden-phone"><h1>Graduates</h1><h2>
 			      Tap in 9 answers anonymously. Sit back. Get recruited.
 			    </h2>
 				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
@@ -70,7 +70,7 @@
 
 					</div>
     
-<div class ="visible-tablet"><h2>Hackers</h2><h4>
+<div class ="visible-tablet"><h2>Graduates</h2><h4>
 			      Tap in 9 answers anonymously.<br> Sit back. Get recruited.
 			    </h4>
 				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
@@ -82,7 +82,7 @@
 				    <%= link_to "fb Login", "/auth/facebook", id: "sign_in", 
 				                                class: "btn btn-medium btn-primary" %>
 </div>
-    <div class ="visible-phone"><h2>Hackers</h2><h4>
+    <div class ="visible-phone"><h2>Graduates</h2><h4>
 			      Tap in 9 answers anonymously.<br> Sit back.<br> Get recruited.
 			    </h4>
 				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
@@ -104,11 +104,11 @@
   		<div class ="hidden-tablet hidden-phone">
 				<h1>Companies</h1>
 			     <h2>
-			      Find the perfect hacker within your budget.
+			      Find the perfect graduate within your budget.
 			    </h2>
 				    <br>
 				    
-				<%= link_to "Find hackers", profiles_path, id: "sign_in", 
+				<%= link_to "Find graduates", profiles_path, id: "sign_in", 
                                 class: "btn btn-large btn-primary" %>
 
 
@@ -116,21 +116,21 @@
 		<div class ="visible-tablet">
 				<h2>Companies</h2>
 			     <h4>
-			      Find the perfect hacker <br> within your budget.
+			      Find the perfect graduate <br> within your budget.
 			    </h4>
 				    <br>
 				    
-				<%= link_to "Find hackers", profiles_path, id: "sign_in", 
+				<%= link_to "Find graduates", profiles_path, id: "sign_in", 
                                 class: "btn btn-medium btn-primary" %>
 		</div>
 		<div class ="visible-phone">
 				<h2>Companies</h2>
 			     <h4>
-			      Find the perfect hacker <br>within your budget.
+			      Find the perfect graduate <br>within your budget.
 			    </h4>
 				    <br>
 				    
-				<%= link_to "Find hackers", profiles_path, id: "sign_in", 
+				<%= link_to "Find graduates", profiles_path, id: "sign_in", 
                                 class: "btn btn-medium btn-primary" %>
 		</div>
 
