--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
               <%= link_to "Settings", edit_user_path(current_user) %>
           <% else %>
           <div class ="hidden-phone">
-          Hackers: <%= link_to "Log In with Facebook", "/auth/facebook", id: "sign_in" %> |
+          Graduates: <%= link_to "Log In with Facebook", "/auth/facebook", id: "sign_in" %> |
           Companies:
               <%= link_to "Sign Up", signup_path %> or
               <%= link_to "Log In", login_path %>
