--- a/app/views/profiles/_accepted_invitations_table.html.erb
+++ b/app/views/profiles/_accepted_invitations_table.html.erb
@@ -1,13 +1,14 @@
+<div class="row">
+<div class ="span8">
 <table class="table table-striped table-hover">
     <thead>
     <tr>
       <th>Name</th>
-      <th>Highest position</th>
-      <th>Platform</th>
-      <th><div class ="hidden-phone">Hacking experience</div></th>
-      <th><div class ="hidden-phone">Total apps</div></th>
-      <th><div class ="hidden-phone">Highest degree</div></th>
-      <th><div class ="hidden-phone">Bay Area</div></th>
+      <th>Highest degree</th>
+      <th>Subject</th>
+      <th>School</th>      
+      <th><div class ="hidden-phone">Graduation</div></th>
+
  
 
       
@@ -17,3 +18,5 @@
       <%= render :partial => 'profiles/accepted_invitation', :collection => @invitations %>
     </tbody>
 </table>
+</div>
+</div>
