--- a/app/views/profiles/_invitation.html.erb
+++ b/app/views/profiles/_invitation.html.erb
@@ -2,23 +2,15 @@
 	
 
 	<td>
-		<%= invitation.candidate.profile.highest_position.name if invitation.candidate.profile.highest_position %>
-	</td>
-
-	<td>
-	
-		<%= invitation.candidate.profile.platforms.map(&:name).join(", ") %>
+		<%= display_education_level(invitation.candidate.profile.highest_degree.level) if invitation.candidate.profile.highest_degree %>
 	</td>
 	<td>
-		<%= app_years(invitation.candidate.profile.app_years)  %>
+		<%= invitation.candidate.profile.highest_degree.subject.name if invitation.candidate.profile.highest_degree && invitation.candidate.profile.highest_degree.subject %>
 	</td>
 	<td>
-		<%= apps_sum(invitation.candidate.profile.ios_apps, invitation.candidate.profile.android_apps) %>
-	</td>			
-	<td>
-		<div class ="hidden-phone"><%= display_education_level(invitation.candidate.profile.education_level) %></div>
+		<%= invitation.candidate.profile.highest_degree.school.name if invitation.candidate.profile.highest_degree && invitation.candidate.profile.highest_degree.school %>
 	</td>
 	<td>
-		<div class ="hidden-phone"><%= short_willingness(invitation.candidate.profile.silicon_valley, invitation.candidate.profile.silicon_valley_part_time) %></div>
-	</td>		
+		<%= invitation.candidate.profile.highest_degree.year if invitation.candidate.profile.highest_degree %>
+	</td>				
   </tr>
