--- a/app/views/profiles/_invitations_table.html.erb
+++ b/app/views/profiles/_invitations_table.html.erb
@@ -1,13 +1,15 @@
+<div class="row">
+<div class ="span8">
 <table class="table table-striped table-hover">
     <thead>
     <tr>
 
-      <th>Highest position</th>
-      <th>Platform</th>
-      <th>Hacking experience</th>
-      <th>Total apps</th>
-      <th><div class ="hidden-phone">Highest degree</div></th>
-      <th><div class ="hidden-phone">Bay Area</div></th>
+      <th>Highest degree</th>
+      <th>Subject</th>
+      <th>School</th>
+      <th>Graduation</th> 
+
+     
       
     </tr>
   </thead>
@@ -15,3 +17,5 @@
       <%= render :partial => 'profiles/invitation', :collection => @invitations %>
     </tbody>
 </table>
+</div>
+</div>
