--- a/app/views/candidate_mailer/signup.html.erb
+++ b/app/views/candidate_mailer/signup.html.erb
@@ -1,6 +1,6 @@
 Welcome to TapCV 
 <br><br>
-TapCV gets you more interview requests by interesting companies! 
+TapCV gets you interview requests by interesting companies! 
 <br><br>
 <% unless @candidate.profile %>
 <b><%= link_to "Get started now by posting your anonymous CV!", new_profile_url %></b>
