--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,7 @@
 	<div class="container">
 		<div class="row">
   			<div class="span2">
-          <br>
-          <div class = "logo"> <%= link_to "TapCV", root_path %></div>
+          <div class = "logo"> <%= link_to image_tag( 'taplogo.png'), root_path %></div>
           <br>
         </div>
         <div class="span8"> 
@@ -56,7 +55,7 @@
               <%= link_to "Settings", edit_user_path(current_user) %>
           <% else %>
           <div class ="hidden-phone">
-          Graduates: <%= link_to "Log In with Facebook", "/auth/facebook", id: "sign_in" %> |
+          Students: <%= link_to "Log In with Facebook", "/auth/facebook", id: "sign_in" %> |
           Companies:
               <%= link_to "Sign Up", signup_path %> or
               <%= link_to "Log In", login_path %>
