--- a/app/views/profiles/_filter_table.html.erb
+++ b/app/views/profiles/_filter_table.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
 <div class ="span8">
 	<div class ="hidden-phone">
-	<h3>Graduates open for jobs</h3>
+	<h3>Students open for jobs</h3>
 	<br>
 	</div>
 	<div class ="visible-phone">
-	<h4>Graduates open for jobs</h4>
+	<h4>Students open for jobs</h4>
 	</div>
   <%= render 'profiles/table' %>
 </div> 
