--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -56,7 +56,7 @@
 <div class ="span6">
 	<div class="center hero-unit">
 				
-    <div class ="hidden-tablet hidden-phone"><h1>Graduates</h1><h2>
+    <div class ="hidden-tablet hidden-phone"><h1>Students</h1><h2>
 			      Tap in 9 answers anonymously. Sit back. Get recruited.
 			    </h2>
 				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
@@ -70,7 +70,7 @@
 
 					</div>
     
-<div class ="visible-tablet"><h2>Graduates</h2><h4>
+<div class ="visible-tablet"><h2>Students</h2><h4>
 			      Tap in 9 answers anonymously.<br> Sit back. Get recruited.
 			    </h4>
 				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
@@ -82,7 +82,7 @@
 				    <%= link_to "fb Login", "/auth/facebook", id: "sign_in", 
 				                                class: "btn btn-medium btn-primary" %>
 </div>
-    <div class ="visible-phone"><h2>Graduates</h2><h4>
+    <div class ="visible-phone"><h2>Students</h2><h4>
 			      Tap in 9 answers anonymously.<br> Sit back.<br> Get recruited.
 			    </h4>
 				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
@@ -108,7 +108,7 @@
 			    </h2>
 				    <br>
 				    
-				<%= link_to "Find graduates", profiles_path, id: "sign_in", 
+				<%= link_to "Find Students", profiles_path, id: "sign_in", 
                                 class: "btn btn-large btn-primary" %>
 
 
@@ -120,7 +120,7 @@
 			    </h4>
 				    <br>
 				    
-				<%= link_to "Find graduates", profiles_path, id: "sign_in", 
+				<%= link_to "Find Students", profiles_path, id: "sign_in", 
                                 class: "btn btn-medium btn-primary" %>
 		</div>
 		<div class ="visible-phone">
@@ -130,7 +130,7 @@
 			    </h4>
 				    <br>
 				    
-				<%= link_to "Find graduates", profiles_path, id: "sign_in", 
+				<%= link_to "Find Students", profiles_path, id: "sign_in", 
                                 class: "btn btn-medium btn-primary" %>
 		</div>
 
