--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -17,7 +17,7 @@
 		<div class ="module"></div>
 		<b>Education (include programs your are currently enrolled in)</b><br><br>
 		<%= f.simple_fields_for :degrees do |degree_form| %>
-		  	<%= degree_form.input :level, collection: [["Highschool",1], ["College/Undergraduate",2], ["Master/Graduate",3], ["Postgraduate/PhD",4]], prompt: "Select degree", label: 'Degree' %>
+		  	<%= degree_form.input :level, collection: [["Highschool",1], ["BA/BS",2], ["MA/MS",3], ["D.Phil",4],["MBA",5],["JD",6], ["MD",7], ["PhD",8]], prompt: "Select degree", label: 'Degree' %>
 		<%= degree_form.association :school, collection: School.order('name'), prompt: "Select university", label: "University/School", :include_blank => "other", %>
 		<%= degree_form.association :subject, collection: Subject.order('name'), prompt: "Select subject", label: "Your major/main subject" %>
 		<%= degree_form.input :gpa, label: "Your GPA", placeholder: 'e.g. "3,65"' %>
@@ -44,16 +44,13 @@
 		<b>Work experience (start with your last/current job)</b><br><br>
 
 		<%= f.fields_for :jobs do |job_form| %>
-		 	<%= job_form.input :company_name, label: "Company/organization name", placeholder: 'e.g. "Google" or "Greenpeace"' %>
-		  	<%= job_form.input :company_size, collection: [["myself only",1], ["2-10",2], ["11-50", 3],["51-200", 4],["201-500", 5],["501-1,000", 6],["1,001-5,000", 7],["5,001-10,000", 8],["10,001+",9]], prompt: "Select number of employees", label: 'Company size' %>
+		 	<%= job_form.input :company_name, label: "Company/organization name", placeholder: 'e.g. "Google" or "World Bank"' %>
 		  	<%= job_form.association :sector, collection: Sector.order('name'), prompt: "Select industry", label: "Company's industry", :include_blank => "other", %>
 		  	<%= job_form.input :position_name, label: 'Position', prompt: "Enter position", placeholder: 'e.g. "intern" or "senior analyst"' %>
 		  	<%= job_form.input :start_date, label: 'Start date', :discard_day => true %>
 		  	<%= job_form.input :end_date, label: 'End date', :discard_day => true %>
 		  	<%= job_form.input :current, label: false, inline_label: 'I\'m currently holding this job (overwrites the end date)' %>
 		  	<%= job_form.input :contract, collection: [["Full-time",1], ["Part-time",2]], prompt: "Select contract", label: 'Full-time or part-time?' %>
-		  	<%= job_form.input :annual_salary, collection: [["None", 0],["$10,000", 10000],["$20,000", 20000],["$30,000", 30000], ["$40,000",40000], ["$50,000",50000],["$60,000",60000],["$70,000",70000],["$80,000",80000],["$90,000",90000],["$100,000",100000],["$120,000",120000],["$140,000",140000],["$160,000",160000],["$180,000",180000],["$200,000",200000],["$250,000",250000],["$300,000",300000],["$350,000",350000],["$400,000",400000],["$500,000+",500000]], prompt: "Select annual salary", label: 'Annual salary if full-time', placeholder: 'e.g. "65000"', hint: 'Annual salary (in USD)' %>
-		  	<%= job_form.input :hourly_salary, collection: [["None", 0], ["$10+", 10], ["$15+", 15], ["$20+", 20], ["$30+", 30], ["$40+", 14], ["$50+", 50], ["$60+", 60], ["$70+", 70], ["$80+", 80], ["$90+", 90], ["$100+", 100], ["$125+", 125], ["$150+", 150], ["$200+", 200], ["$250+", 250], ["$300+", 300], ["$400+", 400], ["$500+", 500], ["$750+", 750], ["$1000+", 1000]], prompt: "Select hourly salary", label: 'Hourly salary if part-time', placeholder: 'e.g. "50"', hint: 'Hourly salary (in USD)' %>
 		  	<p><%= job_form.link_to_remove "[-] Remove the above work experience" %></p>
 		  	<br><br>
 		<div class ="slim_module"></div>
