--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -104,7 +104,7 @@
   		<div class ="hidden-tablet hidden-phone">
 				<h1>Companies</h1>
 			     <h2>
-			      Find the perfect graduate within your budget.
+			      Find the perfect Student within your budget.
 			    </h2>
 				    <br>
 				    
@@ -116,7 +116,7 @@
 		<div class ="visible-tablet">
 				<h2>Companies</h2>
 			     <h4>
-			      Find the perfect graduate <br> within your budget.
+			      Find the perfect Student <br> within your budget.
 			    </h4>
 				    <br>
 				    
@@ -126,7 +126,7 @@
 		<div class ="visible-phone">
 				<h2>Companies</h2>
 			     <h4>
-			      Find the perfect graduate <br>within your budget.
+			      Find the perfect Student <br>within your budget.
 			    </h4>
 				    <br>
 				    
