--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,10 +55,8 @@
               <%= link_to "Settings", edit_user_path(current_user) %>
           <% else %>
           <div class ="hidden-phone">
-          Students: <%= link_to "Log In with Facebook", "/auth/facebook", id: "sign_in" %> |
-          Companies:
-              <%= link_to "Sign Up", signup_path %> or
-              <%= link_to "Log In", login_path %>
+          <%= link_to "Student Log In", candidate_login_path %> |
+              <%= link_to " Company Log In", login_path %>
             </div>
             <% end %>
             <div class ="hidden-phone"><br><br></div>
