--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,6 @@
 <h3>Answer a few questions anonymously.</h3>
-<h4>Don't worry, your identity remains hidden.</h4> 
+<h4>Interested companies will message you. <br>
+You decide whether to reveal your identity and connect.</h4> 
 
 <% if current_candidate.uid != nil %>
 <h4>None of this information will be visible on Facebook.</h4>
