--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -8,7 +8,7 @@
 			<%= f.input :full_time, label: "Full-time", inline_label: 'I am looking for a full-time job.' %>
 			<%= f.input :general_min_yearly_salary, collection: [["$30,000", 30000], ["$40,000",40000], ["$50,000",50000],["$60,000",60000],["$70,000",70000],["$80,000",80000],["$90,000",90000],["$100,000",100000],["$120,000",120000],["$140,000",140000],["$160,000",160000],["$180,000",180000],["$200,000",200000],["$250,000",250000],["$300,000",300000],["$350,000",350000],["$400,000",400000],["$500,000",500000]], prompt: "Select your minimum salary", label: 'Minimum annual salary', placeholder: 'e.g. "65000"', hint: 'Your minimum desired annual salary (in USD)' %>
 			<%= f.input :part_time, label: "Part-time", inline_label: 'I am looking for a part-time job.' %>
-			<%= f.input :general_min_hourly_salary, collection: [["None", 0], ["$10", 10], ["$15", 15], ["$20", 20], ["$30", 30], ["$40", 14], ["$50", 50], ["$60", 60], ["$70", 70], ["$80", 80], ["$90", 90], ["$100", 100], ["$125", 125], ["$150", 150], ["$200", 200], ["$250", 250], ["$300", 300], ["$400", 400], ["$500", 500], ["$750", 750], ["$1000", 1000]], prompt: "Select hourly salary", label: 'Hourly salary if part-time', placeholder: 'e.g. "50"', hint: 'Hourly salary (in USD)' %>
+			<%= f.input :general_min_hourly_salary, collection: [["None", 0], ["$10", 10], ["$15", 15], ["$20", 20], ["$30", 30], ["$40", 14], ["$50", 50], ["$60", 60], ["$70", 70], ["$80", 80], ["$90", 90], ["$100", 100], ["$125", 125], ["$150", 150], ["$200", 200], ["$250", 250], ["$300", 300], ["$400", 400], ["$500", 500], ["$750", 750], ["$1000", 1000]], prompt: "Select hourly salary", label: 'Hourly salary if part-time', placeholder: 'e.g. "50"', hint: 'Your minimum desired hourly wage (in USD)' %>
 		  	<%= f.input :notice_period, collection: [["Today", 0],["1 week", 1],["2 weeks", 2],["3 week", 3], ["4 weeks", 4], ["6 weeks", 6],["2 months", 8],["3 months", 12],["4 months", 16],["5 months", 20],["6 months", 24],["9 months", 36],["1 year", 52]], label: 'Notice period', placeholder: 'e.g. "3"', hint: 'How quickly could you start?', prompt: "Select your notice period"%>
 		  	<%= f.input :work_permit, label: 'Permit', inline_label: 'I am currently permitted to work in the US.' %>
 		 
@@ -17,8 +17,8 @@
 		<div class ="module"></div>
 		<b>Education (include programs your are currently enrolled in)</b><br><br>
 		<%= f.simple_fields_for :degrees do |degree_form| %>
-		  	<%= degree_form.input :level, collection: [["Highschool",1], ["BA/BS",2], ["MA/MS",3], ["D.Phil",4],["MBA",5],["JD",6], ["MD",7], ["PhD",8]], prompt: "Select degree", label: 'Degree' %>
-		<%= degree_form.association :school, collection: School.order('name'), prompt: "Select university", label: "University/School", :include_blank => "other", %>
+		  	<%= degree_form.input :level, collection: [["BA/BS",2], ["MA/MS",3], ["D.Phil",4],["MBA",5],["JD",6], ["MD",7], ["PhD",8]], prompt: "Select degree", label: 'Degree' %>
+		<%= degree_form.association :school, collection: School.order('name'), prompt: "Select university", label: "University/College", :include_blank => "other", %>
 		<%= degree_form.association :subject, collection: Subject.order('name'), prompt: "Select subject", label: "Subject" %>
 		<%= degree_form.input :gpa, label: "GPA", placeholder: 'e.g. "3,65"' %>
 		<%= degree_form.input :year, label: "Year", placeholder: 'e.g. "2014"'  %>
@@ -44,7 +44,7 @@
 		<b>Work experience (start with your last/current job)</b><br><br>
 
 		<%= f.fields_for :jobs do |job_form| %>
-		 	<%= job_form.input :company_name, label: "Company/organization name", placeholder: 'e.g. "Google" or "World Bank"' %>
+		 	<%= job_form.input :company_name, label: "Company/Organization", placeholder: 'e.g. "Google" or "World Bank"' %>
 		  	<%= job_form.association :sector, collection: Sector.order('name'), prompt: "Select industry", label: "Industry" %>
 		  	<%= job_form.input :position_name, label: 'Position', prompt: "Enter position", placeholder: 'e.g. "intern" or "senior analyst"' %>
 		  	<%= job_form.input :start_date, label: 'Start date', :discard_day => true, :prompt => {:year => "Select start year", :month => "Select start month"} %>
