--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,4 +1,6 @@
 <h3>Edit your anonymous CV</h3>
+<h4>Interested companies will message you. <br>
+You decide whether to reveal your identity and connect.</h4> 
 <br>
 
 <%= render 'form' %>
