--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -59,10 +59,10 @@
     <div class ="hidden-tablet hidden-phone"><h1>Students</h1><h2>
 			      Tap in 9 answers anonymously. Sit back. Get recruited.
 			    </h2>
-				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
+				    <br><%= link_to "Signup", candidate_signup_path, 
                                 class: "btn btn-large btn-info" %>
 
-<%= link_to "Login", candidate_login_path, id: "sign_in", 
+<%= link_to "Login", candidate_login_path, 
                                 class: "btn btn-large btn-info" %>
 
 				    <%= link_to "fb Login", "/auth/facebook", id: "sign_in", 
@@ -73,10 +73,10 @@
 <div class ="visible-tablet"><h2>Students</h2><h4>
 			      Tap in 9 answers anonymously.<br> Sit back. Get recruited.
 			    </h4>
-				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
+				    <br><%= link_to "Signup", candidate_signup_path, 
                                 class: "btn btn-medium btn-info" %>
 
-<%= link_to "Login", candidate_login_path, id: "sign_in", 
+<%= link_to "Login", candidate_login_path, 
                                 class: "btn btn-medium btn-info" %>
 
 				    <%= link_to "fb Login", "/auth/facebook", id: "sign_in", 
@@ -85,10 +85,10 @@
     <div class ="visible-phone"><h2>Students</h2><h4>
 			      Tap in 9 answers anonymously.<br> Sit back.<br> Get recruited.
 			    </h4>
-				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
+				    <br><%= link_to "Signup", candidate_signup_path, 
                                 class: "btn btn-medium btn-info" %>
 
-<%= link_to "Login", candidate_login_path, id: "sign_in", 
+<%= link_to "Login", candidate_login_path, 
                                 class: "btn btn-medium btn-info" %>
 
 				    <%= link_to "fb Login", "/auth/facebook", id: "sign_in", 
