changed homepage to mention stanford

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -62,7 +62,7 @@
 				    <br><%= link_to "Signup", candidate_signup_path, 
                                 class: "btn btn-large btn-info" %>
 
-<%= link_to "Login", candidate_login_path, 
+					<%= link_to "Login", candidate_login_path, 
                                 class: "btn btn-large btn-info" %>
 
 				    <%= link_to "fb Login", "/auth/facebook", id: "sign_in", 
@@ -76,7 +76,7 @@
 				    <br><%= link_to "Signup", candidate_signup_path, 
                                 class: "btn btn-medium btn-info" %>
 
-<%= link_to "Login", candidate_login_path, 
+					<%= link_to "Login", candidate_login_path, 
                                 class: "btn btn-medium btn-info" %>
 
 				    <%= link_to "fb Login", "/auth/facebook", id: "sign_in", 
@@ -88,7 +88,7 @@
 				    <br><%= link_to "Signup", candidate_signup_path, 
                                 class: "btn btn-medium btn-info" %>
 
-<%= link_to "Login", candidate_login_path, 
+					<%= link_to "Login", candidate_login_path, 
                                 class: "btn btn-medium btn-info" %>
 
 				    <%= link_to "fb Login", "/auth/facebook", id: "sign_in", 
@@ -104,7 +104,7 @@
   		<div class ="hidden-tablet hidden-phone">
 				<h1>Companies</h1>
 			     <h2>
-			      Find the perfect student within your budget.
+			      Recruit Stanford students and graduates.
 			    </h2>
 				    <br>
 				    
@@ -116,7 +116,7 @@
 		<div class ="visible-tablet">
 				<h2>Companies</h2>
 			     <h4>
-			      Find the perfect student <br> within your budget.
+			      Recruit Stanford students and graduates.
 			    </h4>
 				    <br>
 				    
@@ -126,7 +126,7 @@
 		<div class ="visible-phone">
 				<h2>Companies</h2>
 			     <h4>
-			      Find the perfect student <br>within your budget.
+			      Recruit Stanford students and graduates.
 			    </h4>
 				    <br>
 				    
