added thanks page with fbbutton and hid listing pages till june 24

--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -4,6 +4,22 @@
 @import "bootstrap";
 @import "bootstrap-responsive";
 
+#fbiframe
+{
+margin-top: 80px;
+transform: scale(2);
+-ms-transform: scale(2); 
+-webkit-transform: scale(2); 
+-o-transform: scale(2); 
+-moz-transform: scale(2); 
+transform-origin: bottom left;
+-ms-transform-origin: bottom left;
+-webkit-transform-origin: bottom left;
+-moz-transform-origin: bottom left;
+-webkit-transform-origin: bottom left;
+}
+
+
 
 .logo {
 	margin-top: 5px;
