--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,1 +1,8 @@
+<% if Time.now.to_i < 1372134542 %>
+
+	<%= render "static_pages/opens_later"%>
+<%else%>
+
 <%= render "filter_table" %>
+
+<%end%>
