--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -143,6 +143,16 @@
 		</div>
 
   	</div>
+
+</div>
+
+
+</div>
+<div class ="hidden-tablet hidden-phone">
+<div class="row">
+	<div class ="span6">
+<script src="http://thestartuplegitimizer.com/js/legitimizeme.min.js?pubs=tc-tn-bf-fc-ha"></script>
+</div>
 </div>
 </div>
 
